[package]
name = "iter_imd"
version = "0.1.0"
edition = "2024"

authors = ["Mincong Lu <mintlux667@gmail.com>"]
license = "MIT OR Apache-2.0"

readme = "README.md"
repository = "https://github.com/mintlu8/iter_imd"
description = """
Express difference between two iterators as insertions, modifications and removals.
"""
keywords = ["iter", "iterator", "diff"]
[dependencies]
ordermap = "0.5.6"
